[package]
name = "mecha-recorder"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Dhruvesh08/mecha-recorder"
homepage = "https://github.com/Dhruvesh08/mecha-recorder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alsa = "0.7.0"
